# rapidcheck-conan

./: CMakeLists.txt  build.fsx  conanfile.py  paket.dependencies
test_package/: CMakeLists.txt  conanfile.py
